--- a/server.properties
+++ b/server.properties
@@ -1,24 +1,24 @@
 #Minecraft server properties
-#Mon Mar 11 09:49:29 MSK 2024
+#Mon Mar 11 08:30:25 MSK 2024
 enable-jmx-monitoring=false
-rcon.port=25773
+rcon.port=25575
 level-seed=
-enable-command-block=false
 gamemode=survival
+enable-command-block=false
 enable-query=false
 generator-settings=
 level-name=world
-motd=\u00A7x\u00A7F\u00A7F\u00A70\u00A70\u00A7E\u00A7E\u00A7lH\u00A7x\u00A7F\u00A7F\u00A70\u00A77\u00A7E\u00A72\u00A7lA\u00A7x\u00A7F\u00A7F\u00A70\u00A7E\u00A7D\u00A76\u00A7lC\u00A7x\u00A7F\u00A7F\u00A71\u00A74\u00A7C\u00A7A\u00A7lK\u00A7x\u00A7F\u00A7F\u00A71\u00A7B\u00A7B\u00A7E\u00A7lE\u00A7x\u00A7F\u00A7F\u00A72\u00A72\u00A7B\u00A72\u00A7lD \u00A7x\u00A7F\u00A7F\u00A72\u00A79\u00A7A\u00A76\u00A7lB\u00A7x\u00A7F\u00A7F\u00A73\u00A70\u00A79\u00A7A\u00A7lY \u00A7x\u00A7F\u00A7F\u00A73\u00A76\u00A78\u00A7E\u00A7lP\u00A7x\u00A7F\u00A7F\u00A73\u00A7D\u00A78\u00A72\u00A7lS\u00A7x\u00A7F\u00A7F\u00A74\u00A74\u00A77\u00A76\u00A7lY\u00A7x\u00A7F\u00A7F\u00A74\u00A7B\u00A76\u00A7A\u00A7lC\u00A7x\u00A7F\u00A7F\u00A75\u00A71\u00A75\u00A7E\u00A7lH\u00A7x\u00A7F\u00A7F\u00A75\u00A78\u00A75\u00A72\u00A7lO\u00A7x\u00A7F\u00A7F\u00A75\u00A7F\u00A74\u00A76\u00A7lE\u00A7x\u00A7F\u00A7F\u00A76\u00A76\u00A73\u00A7A\u00A7lN\u00A7x\u00A7F\u00A7F\u00A76\u00A7D\u00A72\u00A7E\u00A7lE\u00A7x\u00A7F\u00A7F\u00A77\u00A73\u00A72\u00A72\u00A7lU\u00A7x\u00A7F\u00A7F\u00A77\u00A7A\u00A71\u00A76\u00A7lX\u00A7x\u00A7F\u00A7F\u00A78\u00A71\u00A70\u00A7A\u00A7l_ \n \u00A7x\u00A7F\u00A7F\u00A70\u00A70\u00A7E\u00A7E\u00A7lS\u00A7x\u00A7F\u00A7F\u00A70\u00A73\u00A7E\u00A78\u00A7lE\u00A7x\u00A7F\u00A7F\u00A70\u00A76\u00A7E\u00A73\u00A7lR\u00A7x\u00A7F\u00A7F\u00A70\u00A7A\u00A7D\u00A7D\u00A7lV\u00A7x\u00A7F\u00A7F\u00A70\u00A7D\u00A7D\u00A77\u00A7lE\u00A7x\u00A7F\u00A7F\u00A71\u00A70\u00A7D\u00A72\u00A7lR \u00A7x\u00A7F\u00A7F\u00A71\u00A73\u00A7C\u00A7C\u00A7lL\u00A7x\u00A7F\u00A7F\u00A71\u00A77\u00A7C\u00A76\u00A7lE\u00A7x\u00A7F\u00A7F\u00A71\u00A7A\u00A7C\u00A70\u00A7lA\u00A7x\u00A7F\u00A7F\u00A71\u00A7D\u00A7B\u00A7B\u00A7lK\u00A7x\u00A7F\u00A7F\u00A72\u00A70\u00A7B\u00A75\u00A7lE\u00A7x\u00A7F\u00A7F\u00A72\u00A73\u00A7A\u00A7F\u00A7lD \u00A7x\u00A7F\u00A7F\u00A72\u00A77\u00A7A\u00A7A\u00A7lh\u00A7x\u00A7F\u00A7F\u00A72\u00A7A\u00A7A\u00A74\u00A7lt\u00A7x\u00A7F\u00A7F\u00A72\u00A7D\u00A79\u00A7E\u00A7lt\u00A7x\u00A7F\u00A7F\u00A73\u00A70\u00A79\u00A79\u00A7lp\u00A7x\u00A7F\u00A7F\u00A73\u00A74\u00A79\u00A73\u00A7ls\u00A7x\u00A7F\u00A7F\u00A73\u00A77\u00A78\u00A7D\u00A7l:\u00A7x\u00A7F\u00A7F\u00A73\u00A7A\u00A78\u00A77\u00A7l/\u00A7x\u00A7F\u00A7F\u00A73\u00A7D\u00A78\u00A72\u00A7l/\u00A7x\u00A7F\u00A7F\u00A74\u00A71\u00A77\u00A7C\u00A7ld\u00A7x\u00A7F\u00A7F\u00A74\u00A74\u00A77\u00A76\u00A7li\u00A7x\u00A7F\u00A7F\u00A74\u00A77\u00A77\u00A71\u00A7ls\u00A7x\u00A7F\u00A7F\u00A74\u00A7A\u00A76\u00A7B\u00A7lc\u00A7x\u00A7F\u00A7F\u00A74\u00A7D\u00A76\u00A75\u00A7lo\u00A7x\u00A7F\u00A7F\u00A75\u00A71\u00A76\u00A70\u00A7lr\u00A7x\u00A7F\u00A7F\u00A75\u00A74\u00A75\u00A7A\u00A7ld\u00A7x\u00A7F\u00A7F\u00A75\u00A77\u00A75\u00A74\u00A7l.\u00A7x\u00A7F\u00A7F\u00A75\u00A7A\u00A74\u00A7E\u00A7lg\u00A7x\u00A7F\u00A7F\u00A75\u00A7E\u00A74\u00A79\u00A7lg\u00A7x\u00A7F\u00A7F\u00A76\u00A71\u00A74\u00A73\u00A7l/\u00A7x\u00A7F\u00A7F\u00A76\u00A74\u00A73\u00A7D\u00A7lt\u00A7x\u00A7F\u00A7F\u00A76\u00A77\u00A73\u00A78\u00A7lx\u00A7x\u00A7F\u00A7F\u00A76\u00A7A\u00A73\u00A72\u00A7lv\u00A7x\u00A7F\u00A7F\u00A76\u00A7E\u00A72\u00A7C\u00A7lD\u00A7x\u00A7F\u00A7F\u00A77\u00A71\u00A72\u00A77\u00A7lW\u00A7x\u00A7F\u00A7F\u00A77\u00A74\u00A72\u00A71\u00A7lz\u00A7x\u00A7F\u00A7F\u00A77\u00A77\u00A71\u00A7B\u00A7lR\u00A7x\u00A7F\u00A7F\u00A77\u00A7B\u00A71\u00A75\u00A7l8\u00A7x\u00A7F\u00A7F\u00A77\u00A7E\u00A71\u00A70\u00A7l9\u00A7x\u00A7F\u00A7F\u00A78\u00A71\u00A70\u00A7A\u00A7lF
-query.port=25679
+motd=A Minecraft Server
+query.port=25683
 pvp=true
 generate-structures=true
 difficulty=easy
 network-compression-threshold=256
 max-tick-time=60000
-max-players=9000
+max-players=99
 use-native-transport=true
-enable-status=true
 online-mode=false
+enable-status=true
 allow-flight=false
 rcon.ip=0.0.0.0
 broadcast-rcon-to-ops=true
@@ -26,15 +26,16 @@ view-distance=10
 max-build-height=256
 server-ip=0.0.0.0
 allow-nether=true
-server-port=25679
-sync-chunk-writes=true
+server-port=25683
 enable-rcon=true
+sync-chunk-writes=true
+server-name=Unknown Server
 op-permission-level=4
 prevent-proxy-connections=false
-resource-pack=https\://www.dropbox.com/s/qawdnmrzouoesho/Mine%20Land_1.zip?dl\=0
+resource-pack=
 entity-broadcast-range-percentage=100
+rcon.password=1234567
 player-idle-timeout=0
-rcon.password=lunin7052830
 force-gamemode=false
 debug=false
 rate-limit=0
@@ -49,6 +50,6 @@ level-type=default
 text-filtering-config=
 spawn-monsters=true
 enforce-whitelist=false
-spawn-protection=16
 resource-pack-sha1=
+spawn-protection=16
 max-world-size=29999984
