--- a/server.properties
+++ b/server.properties
@@ -21,14 +21,14 @@ online-mode=false
 enable-status=true
 allow-flight=false
 rcon.ip=0.0.0.0
-broadcast-rcon-to-ops=true
+broadcast-rcon-to-ops=false
 view-distance=4
 max-build-height=256
 server-ip=0.0.0.0
 allow-nether=true
 server-port=25005
 sync-chunk-writes=true
-enable-rcon=false
+enable-rcon=true
 server-name=Unknown Server
 op-permission-level=4
 prevent-proxy-connections=false
